Update src/main/java/de/tum/in/www1/artemis/domain/plagiarism/PlagiarismCase.java
Co-authored-by: Lucas Welscher <ga53foy@mytum.de>